--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html><body><h1>Mod-Rewrite is not enabled</h1><p>Please enable rewrite module on your web server to continue</body></html>
+<html>
+<head>
+  <title>Server Error: Some settings are not done yet.</title>
+</head>
+  <body>
+    <h1>Mod-Rewrite is not enabled</h1>
+    <p>Please enable rewrite module on your web server to continue.</p>
+  </body>
+</html>
